# oracle

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: blueprints.yaml
oracle_hook/: Cargo.toml
oracle_hook/src/: lib.rs  oracle_hook.rs
oracle_hook/tests/: helper.rs  oracle_hook.rs  oracle_subminutes.rs
oracle_hook/tests/specification/: oracle_test_datapoints.json
src/: lib.rs  oracle.rs
test_oracle/: Cargo.toml
test_oracle/src/: lib.rs  test_oracle.rs
tests/: helper.rs  oracle.rs  oracle_subminutes.rs
