[workspace]
members = [
    "oracle_hook"
]

[package]
name = "oracle"
version = "1.0.5"
edition = "2021"
license = "MIT"
description = "Time-weighted average price oracle for the Ociswap pools"
repository = "https://github.com/ociswap/oracle"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.4.0" }
pretty_assertions = "1.3.0"
common = { git = "https://github.com/ociswap/pools-common" }
