[package]
name = "oracle"
version = "1.2.5"
edition = "2021"
license = "MIT"
description = "Time-weighted average price oracle for the Ociswap pools"
repository = "https://github.com/ociswap/oracle"

[dependencies]
sbor = "1.2.0"
scrypto = "1.2.0"
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.6.0" }
common = { git = "https://github.com/ociswap/pools-common", tag = "v1.2.2" }

[dev-dependencies]
radix-engine = "1.2.0"
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0" }
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.6.0" }
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
test_oracle = { path = "test_oracle" }
test-case = "3"
