[package]
name = "oracle_hook"
version = "1.0.0"
edition = "2021"

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
# common = { git = "https://github.com/ociswap/pools-common" }
common = { git = "ssh://git@github.com/ociswap/pools-common.git" }
oracle = { path = ".." }

[dev-dependencies]
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0-alpha.5" }
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.4.0" }
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
oracle_hook = { path = ".", features = ["test"] }
# test_helpers = { path = "../test_helpers" }
test-case = "3"

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
