[package]
name = "test_oracle"
version = "1.0.0"
edition = "2021"

[dependencies]
sbor = "1.3.0"
scrypto = "1.3.0"
common = { git = "https://github.com/ociswap/pools-common", tag = "v1.2.4" }
oracle = { path = ".." }

[lib]
crate-type = ["cdylib", "lib"]

[profile.dev]
opt-level = 'z'
lto = false
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true
